Docs: Add **Master CSS Code Linting for Svelte**

--- a/docs/browser-support/content.mdx
+++ b/docs/browser-support/content.mdx
@@ -40,7 +40,7 @@ Same goes for some CSS selectors.
 Master CSS has built-in commonly used CSS properties, and you hardly need to extend rules to transform styles, but once new CSS features are launched, how to use them immediately?
             
 ### Support the new CSS property
-Assuming that a brand new CSS property of `new-property` has just been launched, you can use it ahead of time through [arbitrarily CSS syntax](/docs/syntax/styles#arbitrary-css-rules) `{}` before we include it in the core rules:
+Assuming that a brand new CSS property of `new-property` has just been launched, you can use it ahead of time through [arbitrary property declarations](/docs/style-declarations#arbitrary-properties) `{}` before we include it in the core rules:
 ```html
 <div class="**{new-property:value}**">…</div>
 ```
