--- a/docs/code-linting/content.mdx
+++ b/docs/code-linting/content.mdx
@@ -53,7 +53,7 @@ See more feature [details ↓](#features)
 ## Installation guides
 <IconButtons url="/docs/code-linting">
     {[
-        ...frameworks.filter(({ name }) => ['React', 'Vue.js', 'Angular'].includes(name)),
+        ...frameworks.filter(({ name }) => ['React', 'Vue.js', 'Angular', 'Svelte'].includes(name)),
         ...editors.filter(({ name }) => ['Visual Studio Code'].includes(name)),
     ]}
 </IconButtons>
