--- a/docs/configuration/setup/content.mdx
+++ b/docs/configuration/setup/content.mdx
@@ -23,7 +23,7 @@ Create a `styles/btn.js` file and export the class names in the following standa
 ```js name=styles/btn.css.js
 /** @type {import('@master/css').Config} */
 export default {
-    classes: {
+    styles: {
         btn: {
             '': 'font:14 text:center h:40 p:10|15',
             primary: 'bg:primary fg:white',
