New(CSS): Master CSS Variables

--- a/docs/configuration/content.mdx
+++ b/docs/configuration/content.mdx
@@ -1,5 +1,5 @@
 import RulesOverview from '../rules/components/Overview.mdx'
-import ValuesOverview from '../values/components/Overview.mdx'
+import VariablesOverview from '../variables/components/Overview.mdx'
 import SemanticsOverview from '../semantics/components/Overview.mdx'
 import BreakpointsOverview from '../viewports/components/Overview.mdx'
 import KeyframesOverview from '../animations/components/Overview.mdx'
@@ -46,9 +46,9 @@ Customizing [selectors](/docs/selectors) for your design system.
 Customizing [semantic](/docs/semantic) classes for your design system.
 <SemanticsOverview />
 
-### `.values`
-Customizing substitute [values](/docs/values) for your design system.
-<ValuesOverview />
+### `.variables`
+Customizing [variables](/docs/variables) for your design tokens.
+<VariablesOverview />
 
 ### `.viewports`
 Customizing responsive [viewports](/docs/viewports) for your design system.
