--- a/docs/rules/components/Overview.mdx
+++ b/docs/rules/components/Overview.mdx
@@ -1,15 +1,11 @@
 ```js name=master.css.js
 export default {
-    rules: {
-        fontSize: { 
-            values: {
-                sm: 14
-            }
+    variables: {
+        fontSize: {
+            sm: 14
         },
         maxWidth: {
-            values: {
-                md: 1024
-            }
+            md: 1024
         }
     }
 }
