--- a/docs/rules/content.mdx
+++ b/docs/rules/content.mdx
@@ -4,12 +4,10 @@
 ---
 
 ## Customization
-### Extend values for each rule
-Implement your design system's `values` in different syntax rules.
+### Extend variables for each rule
+Implement your design tokens in different syntax rules.
 
 🚧
-
-To customize global values, check out the [Values Configuration](/docs/values) documentation
 
 ---
 
