--- a/docs/style-declarations/content.mdx
+++ b/docs/style-declarations/content.mdx
@@ -36,20 +36,20 @@
 ### Group
 <GroupSyntax />
 
-### Variables
-<Variables />
-
 ### Important
 <Important />
 
 ---
 
-## Value
-
-### Token values
+## Variables
+### Native
+<Variables />
+### Custom variables
 <Tokens />
 
-### Unit values
+---
+
+## Units and Values
 <Units />
 
 ### Unit value conversion
@@ -64,5 +64,7 @@
 ### Negative values
 <Negative />
 
-### Value functions
+---
+
+## Functions
 <Functions />
