--- a/docs/color/content.mdx
+++ b/docs/color/content.mdx
@@ -3,7 +3,7 @@
 
 ## Basic usage
 ### Color tokens
-Change the text color of an element using the preset [color tokens](/docs/colors).
+Change the text color of an element using the preset [color variables](/docs/colors).
 <Demo>
     <div className="fg:code-blue font:56 font:heavy">Aa</div>
 </Demo>
