--- a/docs/configuration/content.mdx
+++ b/docs/configuration/content.mdx
@@ -46,24 +46,24 @@ Customizing [selectors](/docs/selectors) for your design system.
 Customizing [semantic](/docs/semantic) classes for your design system.
 <SemanticsOverview />
 
-### `.variables`
-Customizing [variables](/docs/variables) for your design tokens.
-<VariablesOverview />
-
 ### `.viewports`
 Customizing responsive [viewports](/docs/viewports) for your design system.
 <BreakpointsOverview />
 
----
-
-## Variable
 ### `.colors`
 Customizing [colors](/docs/colors) for your design system.
 <ColorsOverview />
 
-### `.fonts`
-Customizing [fonts](/docs/colors) for your design system.
+---
+
+## Design tokens and Variables
+### `.variables.fontFamily`
+Customizing [fonts](/docs/fonts) for your design system.
 <FontsOverview />
+
+### `.variables`
+Customizing [variables](/docs/variables) for your design tokens.
+<VariablesOverview />
 
 {/* ### `.variables` 🚧 */}
 
