--- a/docs/core/content.mdx
+++ b/docs/core/content.mdx
@@ -137,7 +137,7 @@ export default {
     }
 }
 ```
-Now you have richer intermediate color tokens to work with:
+Now you have richer intermediate color variables to work with:
 ```html
 <div class="bg:**slate-98**"></div>
 ```
