--- a/docs/media-queries/content.mdx
+++ b/docs/media-queries/content.mdx
@@ -10,3 +10,9 @@
 
 ## Customization
 🚧
+
+---
+
+## Default
+<Default />
+View the full [source code](https://github.com/master-co/css/blob/beta/packages/css/src/config/media-queries.ts)
