--- a/docs/rendering-modes/content.mdx
+++ b/docs/rendering-modes/content.mdx
@@ -1,19 +1,19 @@
 <DocTable className="{text:14;white-space:pre-wrap;font:regular}_p  overflow-x:auto {px:30;mx:-30}@<sm table-layout:fixed_table" noScroll>
     <thead>
         <tr>
-            <th className="w:calc(50vw-1.5rem) w:1/4@sm">
+            <th className="w:calc(50vw-1.5rem) w:33.3%@sm">
                 <DocBadge color="primary" size="sm" className="mb:15">Recommended</DocBadge>
                 <div className="font:22@sm font:bold">Progressive Rendering</div>
                 <p className="fg:neutral mt:8! hide@<sm">Renders HTML statically or server-side for class names, generates CSS rules, and loads the runtime engine asynchronously.</p>
                 <LearnMore href="/docs/rendering-modes/progressive-rendering">Learn more</LearnMore>
             </th>
-            <th className="w:calc(50vw-1.5rem) w:1/4@sm">
+            <th className="w:calc(50vw-1.5rem) w:33.3%@sm">
                 <DocBadge color="fade" size="sm" className="mb:15">Easiest</DocBadge>
                 <div className="font:22@sm font:bold">Runtime Rendering</div>
                 <p className="fg:neutral mt:8! hide@<sm">Observe for changes to class names in the DOM tree to manipulate CSS rules and sync to the runtime stylesheet.</p>
                 <LearnMore href="/docs/rendering-modes/runtime-rendering">Learn more</LearnMore>
             </th>
-            <th className="w:calc(50vw-1.5rem) w:1/4@sm">
+            <th className="w:calc(50vw-1.5rem) w:33.3%@sm">
                 <DocBadge color="fade" size="sm" className="mb:15 invisible">Zero Runtime</DocBadge>
                 <div className="font:22@sm font:bold">Static Extraction</div>
                 <p className="fg:neutral mt:8! hide@<sm">Extract class names from various files at build time, generate a virtual CSS module or file, and import it into the entry file.</p>
