--- a/docs/styles/components/Overview.mdx
+++ b/docs/styles/components/Overview.mdx
@@ -1,6 +1,6 @@
 ```js name=master.css.js
 export default {
-    classes: {
+    styles: {
         card: {
             '': 'bg:white r:8',
             header: 'object:cover w:full',
