--- a/docs/text-transform/content.mdx
+++ b/docs/text-transform/content.mdx
@@ -4,23 +4,23 @@
 <Demo $py={0}>
     <DemoPanel className="flex flex:col gap:30">
         <div className="w:full">
-            <code className="fg:fade font:12 mb:5 block">capitalize</code>
+            <DemoLabel>capitalize</DemoLabel>
             <DemoP><b className="bg-stripe-pink">H</b>eavy <b className="bg-stripe-pink">B</b>oxes <b className="bg-stripe-pink">P</b>erform <b className="bg-stripe-pink">Q</b>uick <b className="bg-stripe-pink">W</b>altzes <b className="bg-stripe-pink">A</b>nd <b className="bg-stripe-pink">J</b>igs.</DemoP>
         </div>
         <div className="w:full">
-            <code className="fg:fade font:12 mb:5 block">lowercase</code>
+            <DemoLabel>lowercase</DemoLabel>
             <DemoP><b className="bg-stripe-pink">heavy boxes perform quick waltzes and jigs.</b></DemoP>
         </div>
         <div className="w:full">
-            <code className="fg:fade font:12 mb:5 block">uppercase</code>
+            <DemoLabel>uppercase</DemoLabel>
             <DemoP><b className="bg-stripe-pink">HEAVY BOXES PERFORM QUICK WALTZES AND JIGS.</b></DemoP>
         </div>
         <div className="w:full">
-            <code className="fg:fade font:12 mb:5 block">uppercase::first-letter</code>
+            <DemoLabel>uppercase::first-letter</DemoLabel>
             <DemoP><b className="bg-stripe-pink">H</b>eavy boxes perform quick waltzes and jigs.</DemoP>
         </div>
         <div className="w:full">
-            <code className="fg:fade font:12 mb:5 block">text-transform:none</code>
+            <DemoLabel>text-transform:none</DemoLabel>
             <DemoP>heavy boxes perform quick waltzes and jigs.</DemoP>
         </div>
     </DemoPanel>
