--- a/docs/font-family/content.mdx
+++ b/docs/font-family/content.mdx
@@ -1,9 +1,125 @@
 ## Overview [sr-only]
 <Overview/>
 
+<Demo $py={0}>
+    <DemoPanel className="flex flex:col gap:30">
+        <div className="w:full">
+            <DemoLabel>sans</DemoLabel>
+            <DemoP className="font:sans">Heavy boxes perform quick waltzes and jigs.</DemoP>
+        </div>
+        <div className="w:full">
+            <DemoLabel>serif</DemoLabel>
+            <DemoP className="font:serif">Heavy boxes perform quick waltzes and jigs.</DemoP>
+        </div>
+        <div className="w:full">
+            <DemoLabel>mono</DemoLabel>
+            <DemoP className="font:mono">Heavy boxes perform quick waltzes and jigs.</DemoP>
+        </div>
+    </DemoPanel>
+</Demo>
+Using the font ambiguous shorthand with predefined [variables](/docs/variables) to simplify the native syntax.
+```html
+<div class="font-family:sans">
++<div class="font:sans">Recommanded
+<div class="f:sans">
+```
+
+---
+
+## Basic usage
+### Set the font family
+Set the typeface of an element using the `font-family:` syntax.
+<Demo $py={0}>
+    <DemoPanel className="flex flex:col gap:30">
+        <div className="w:full">
+            <DemoP className="font-family:cursive">Heavy boxes perform quick waltzes and jigs.</DemoP>
+        </div>
+    </DemoPanel>
+</Demo>
+```html
+<p class="**font-family:cursive**">Heavy boxes perform quick waltzes and jigs.</p>
+```
+In practice, you wouldn't arbitrarily set the font family within the template; instead, you would unify your fonts through [custom variables](#customization).
+
+### Apply fonts globally
+Relying on the `font-family` inherited behavior, you can set the entire page font in `html <body>`.
+```html
+<body class="**font:sans**">…</body>
+```
+
+---
+
 ## Conditionally apply
 Apply styles in [different states](/docs/states-and-queries) using selectors, media queries, etc.
 ```html
 <div class="font:mono**:hover** font:mono**@sm** font:mono**@dark** font:mono**@print**">…</div>
 ```
+### Apply fonts to specified elements
+Use the `mcss _:where(code,pre)` to select specified elements and apply the font.
+```html
+<body class="**font:mono_:where(code,pre)**">…</body>
+```
 
+---
+
+## Customization
+### Add your font
+Add `fontFamily` variables and use defaults as a fallback. For example, to add a font named `Inter` from [Google Fonts](#google-fonts):
+```js name=master.css.js
+import { variables } from '@master/css'
+
+export default {
+    variables: {
+        fontFamily: {
++            sans: ['Inter', ...variables.fontFamily.sans],
++            mono: ['Fira Code', ...variables.fontFamily.mono]
+        }
+    }
+}
+```
+Or simply add as a string:
+```js
+export default {
+    variables: {
+        fontFamily: {
++            sans: 'Inter,sans-serif'
++            mono: 'Fira Code,monospace'
+        }
+    }
+}
+```
+The added `variables.fontFamily` can also be used in the [font shorthand](/docs/font).
+
+### Use Google Fonts
+The fastest way to declare custom font faces is through [Google Fonts](https://fonts.google.com/).
+```html name=index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
++    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+</head>
+</html>
+```
+
+### Use self-hosted fonts
+You can also self-host the fonts via native CSS, as usual.
+```css name=styles/fonts.css
+@font-face {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url("/fonts/Inter-Regular.woff2") format("woff2"),
+        url("/fonts/Inter-Regular.woff") format("woff");
+}
+```
+
+---
+
+## See also
+- [Font](/docs/font)
+- [Font Family](/docs/font-family)
+- [Font Feature Settings](/docs/font-feature-settings)
+- [Font Variant Numeric](/docs/font-variant-numeric)
