--- a/docs/global-styles/content.mdx
+++ b/docs/global-styles/content.mdx
@@ -1,7 +1,7 @@
 ## Overview [sr-only]
 Customize your fonts, foreground color, etc., add syntax in `html <body class="…">` and rely on native inheritance behavior or use CSS selectors to preset global styles.
 
-As an example of custom [fonts](/docs/fonts):
+As an example of custom [fonts](/docs/font-family):
 ```html
 <body class="**font:sans** **font:mono_:where(code,pre)**">…</body>
 ```
