--- a/docs/media-queries/components/Overview.mdx
+++ b/docs/media-queries/components/Overview.mdx
@@ -1,11 +1,16 @@
 ```js name=master.css.js
 export default {
     mediaQueries: {
-        'watch': '(max-device-width:42mm) and (min-device-width:38mm)'
+        mobile: 600,
+        tablet: 1024,
+        desktop: 1440,
+        watch: '(max-device-width:42mm) and (min-device-width:38mm)'
     }
 }
 ```
 Use them in HTML:
 ```html
-<div class="text:center**@watch**"></div>
+<div class="font:24**@mobile** font:36**@table** font:48**@desktop** text:center**@watch**"></div>
 ```
+Check out the [responsive design](/docs/responsive-design) to learn about responsive syntax.
+
