--- a/docs/variables/components/Overview.mdx
+++ b/docs/variables/components/Overview.mdx
@@ -1,12 +1,24 @@
 ```js name=master.css.js
+import { variables } from '@master/css'
+
 export default {
-    values: {
-        '2x': 32
+    variables: {
+        fontFamily: {
+            sans: ['Inter', ...variables.fontFamily.sans],
+            mono: ['Fira Code', ...variables.fontFamily.mono]
+        }
     }
 }
 ```
-Use them in HTML:
+Apply custom fonts globally using [font family](/docs/font-family) syntax and [Google Fonts](https://fonts.google.com/):
 ```html
-<div class="w:**2x** mt:**2x**"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
++    <link rel="preconnect" href="https://fonts.googleapis.com">
++    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
++    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+</head>
+<body class="**font:sans** **font:mono_:where(code,pre)** font-feature:'salt'">…</body>
+</html>
 ```
-Use `2x` instead of `2` as the token value to avoid the built-in unit conversion behavior.
