Docs: Improve fonts documentation

--- a/docs/font-family/content.mdx
+++ b/docs/font-family/content.mdx
@@ -63,63 +63,4 @@ Use the `mcss _:where(code,pre)` to select specified elements and apply the font
 ---
 
 ## Customization
-### Add your font
-Add `fontFamily` variables and use defaults as a fallback. For example, to add a font named `Inter` from [Google Fonts](#google-fonts):
-```js name=master.css.js
-import { variables } from '@master/css'
-
-export default {
-    variables: {
-        fontFamily: {
-+            sans: ['Inter', ...variables.fontFamily.sans],
-+            mono: ['Fira Code', ...variables.fontFamily.mono]
-        }
-    }
-}
-```
-Or simply add as a string:
-```js
-export default {
-    variables: {
-        fontFamily: {
-+            sans: 'Inter,sans-serif'
-+            mono: 'Fira Code,monospace'
-        }
-    }
-}
-```
-The added `variables.fontFamily` can also be used in the [font shorthand](/docs/font).
-
-### Use Google Fonts
-The fastest way to declare custom font faces is through [Google Fonts](https://fonts.google.com/).
-```html name=index.html
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-</head>
-</html>
-```
-
-### Use self-hosted fonts
-You can also self-host the fonts via native CSS, as usual.
-```css name=styles/fonts.css
-@font-face {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url("/fonts/Inter-Regular.woff2") format("woff2"),
-        url("/fonts/Inter-Regular.woff") format("woff");
-}
-```
-
----
-
-## See also
-- [Font](/docs/font)
-- [Font Family](/docs/font-family)
-- [Font Feature Settings](/docs/font-feature-settings)
-- [Font Variant Numeric](/docs/font-variant-numeric)
+Check out the [custom font guide](/docs/fonts).
