--- a/docs/colors/content.mdx
+++ b/docs/colors/content.mdx
@@ -1,9 +1,9 @@
-## Default Reference [sr-only]
+## Default [sr-only]
 <Default />
 
 ---
 
-## Basic usage
+## Customization
 ### Add a color
 Add your color variables using hex codes and extend the defaults.
 ```js name=master.css.js
