--- a/docs/font-family/content.mdx
+++ b/docs/font-family/content.mdx
@@ -39,7 +39,7 @@ Set the typeface of an element using the `font-family:` syntax.
 ```html
 <p class="**font-family:cursive**">Heavy boxes perform quick waltzes and jigs.</p>
 ```
-In practice, you wouldn't arbitrarily set the font family within the template; instead, you would unify your fonts through [custom variables](#customization).
+In practice, you wouldn't arbitrarily set the font family within the template; instead, you would unify your fonts through [custom variables](/docs/fonts).
 
 ### Apply fonts globally
 Relying on the `font-family` inherited behavior, you can set the entire page font in `html <body>`.
