--- a/docs/installation/(root)/cdn/content.mdx
+++ b/docs/installation/(root)/cdn/content.mdx
@@ -1,14 +1,22 @@
-Copy and paste the CDN to quickly launch the [runtime engine](/docs/rendering-modes/runtime-rendering) in your browser.
+Copy and paste [CDNs](#other-cdns) to instantly launch the [runtime engine](/docs/rendering-modes/runtime-rendering) in your browser out of the box.
 
-## Installation [sr-only]
 <StepSection className="mt:50">
     <Step>
-        ### <StepNum />Start using Master CSS
-        That's it, now style your first element with Master CSS syntax!
+        ### <StepNum />Start in one step
+        Copy and paste to start styling your first element with Master CSS!
         <CDNCodes />
         <p className="mt:50">Open your browser to watch the changes.</p>
         <HelloWorld />
     </Step>
 </StepSection>
+
+import cdns from 'shared/data/cdns'
+
+## Other CDNs
+<IconButtons url="/docs/installation">
+    {cdns}
+</IconButtons>
+
+---
 
 Get stuck? Check out our [web framework](/docs/installation#web-frameworks) or [build tool](/docs/installation#build-tools) guides for better starting points and recommendations.
