--- a/docs/installation/(root)/general/content.mdx
+++ b/docs/installation/(root)/general/content.mdx
@@ -2,7 +2,7 @@ The easiest way to use Master CSS from scratch is to initialize the [runtime eng
 
 ## Installation [sr-only]
 
-<StepSection className="mt:50">
+<StepSection>
     <Step $row>
         <StepL>
             ### <StepNum />Install Master CSS
