--- a/docs/installation/esm-sh/content.mdx
+++ b/docs/installation/esm-sh/content.mdx
@@ -19,7 +19,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
         +        import { initRuntime } from 'https://esm.sh/@master/css@beta'
                 initRuntime({
                     colors: {
-                        primary: '#ff0000'
+                        primary: '#000000'
                     }
                 })
             </script>
